# ExChange

./: .gitignore  .mcp.json  Cargo.toml  DEVELOPMENT_TODO.md  README.md  TECHNICAL_DESIGN.md  config.local.toml.example  config.toml
.claude/: settings.local.json
docs/: 1.txt  BA.ppk  ENDPOINT_VERIFICATION_REPORT.md  INDICATOR_VALIDATION.md  PLAN_FILES_VERIFICATION_SUMMARY.md  QUICK_START.md  TESTING_GUIDE.md  TEST_RESULTS.md  TEST_RESULTS_SIMPLE.md  TEST_RESULTS_SIMPLE_2.md  Test-Key.txt  VALIDATION_REPORT.md
docs/plans/: 2025-01-22-phase1-mvp-core-engine.md  2025-01-27-phase2-strategy-system.md  tasks-11-14-supplement.md
examples/: test_telegram.rs
scripts/: run_validation.bat  run_validation.sh  validate_indicators.py
src/: binance.rs  config.rs  engine.rs  indicators.rs  lib.rs  logging.rs  main.rs  orderbook.rs  websocket.rs
src/monitoring/: telegram.rs
src/risk/: manager.rs
src/strategy/: dual_ma.rs  mod.rs
tests/: binance_client_test.rs  config_test.rs  dual_ma_test.rs  indicators_test.rs  orderbook_test.rs  risk_manager_test.rs  telegram_test.rs  websocket_test.rs
tests/fixtures/: indicator_reference.json
