[package]
name = "trading-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# 异步运行时
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"

# HTTP客户端
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
toml = "0.8"

# 配置管理
config = "0.14"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 时间处理
chrono = "0.4"

# 加密（HMAC签名）
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# 有序浮点数（用于订单簿）
ordered-float = "4.2"

[dev-dependencies]
mockito = "1.2"
tokio-test = "0.4"
